--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</style>
 </head>
 <body>
-	<h2>JS - andmetüübid</h2>
+	<h2>JS - tüübiteisendused</h2>
 
 	<script src="app.js"></script>
 </body>
