--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 	<meta charset="utf-8">
 	<title>JavaScript</title>
 	<style type="text/css">
-		h2 {color: white;}
 	</style>
 </head>
 <body>
-	<h2>JS - ES5 ja ES6</h2>
+	<h2>JS - Massiivitöötlus</h2>
 	<script src="app.js"></script>
 </body>
 </html>
