--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</style>
 </head>
 <body>
-	<h2>JS - Massiivitöötlus</h2>
+	<h2>JS - Objektidetöötlus </h2>
 	<script src="app.js"></script>
 </body>
 </html>
