--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 	<meta charset="utf-8">
 	<title>JavaScript</title>
 	<style type="text/css">
+	h2 {
+		text-align: center;
+	}
 	</style>
 </head>
 <body>
-	<h2>JS - Üldtsükkel </h2>
+	<h2>JS - Deklareerimine </h2>
 	<script src="app.js"></script>
 </body>
 </html>
