--- a/index.html
+++ b/index.html
@@ -3,14 +3,48 @@
 <head>
 	<meta charset="utf-8">
 	<title>JavaScript</title>
-	<style type="text/css">
-	h2 {
-		text-align: center;
-	}
-	</style>
+
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 <body>
-	<h2>JS - Deklareerimine </h2>
+	<div class="container">
+        <div class="row">
+        	<div class="col s12">
+        		<h2>JS - DOM elemendid</h2>
+        		<div class="card">
+        			<div class="card-content">
+          				<span class="card-title">Add task</span>
+          				<div class="row">
+          					<form id="task-form">
+          						<div class="input-field col s12">
+						          <input id="task" type="text">
+						          <label for="task">New Task</label>
+						        </div>
+						        <input type="submit" value="Add task" class="btn">
+          					</form>
+          				</div>
+       				</div>
+        			<div class="card-action">
+					    <ul class="collection">
+					      <li class="collection-item">Study JS
+					      	<a href="#" class="secondary-content">X</a>
+					      </li>
+					      <li class="collection-item">Study HTML
+					      	<a href="#" class="secondary-content">X</a>
+					      </li>
+					      <li class="collection-item">Study CSS
+					      	<a href="#" class="secondary-content">X</a>
+					      </li>
+					    </ul>
+            		</div>
+      			</div>
+        	</div>
+        </div>
+    </div>
+
+	<!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<script src="app.js"></script>
 </body>
 </html>
