--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="container">
         <div class="row">
         	<div class="col s12">
-        		<h2>JS - DOM elemendid</h2>
+        		<h2>JS - DOM elementinde käsitlemine</h2>
         		<div class="card">
         			<div class="card-content">
           				<span class="card-title">Add task</span>
@@ -26,6 +26,7 @@
           				</div>
        				</div>
         			<div class="card-action">
+        				<h4 id="task-title">Tasks</h4>
 					    <ul class="collection">
 					      <li class="collection-item">Study JS
 					      	<a href="#" class="secondary-content">X</a>
