--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="container">
         <div class="row">
         	<div class="col s12">
-        		<h2>JS - DOM elementinde käsitlemine</h2>
+        		<h2>JS - DOM elementinde loomine</h2>
         		<div class="card">
         			<div class="card-content">
           				<span class="card-title">Add task</span>
