--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 					      	<a href="#" class="secondary-content">X</a>
 					      </li>
 					    </ul>
+					    <a id="clear" class="btn">Clear all</a>
             		</div>
       			</div>
         	</div>
