--- a/index.html
+++ b/index.html
@@ -27,17 +27,7 @@
        				</div>
         			<div class="card-action">
         				<h4 id="task-title">Tasks</h4>
-					    <ul class="collection">
-					      <li class="collection-item">Study JS
-					      	<a href="#" class="secondary-content">X</a>
-					      </li>
-					      <li class="collection-item">Study HTML
-					      	<a href="#" class="secondary-content">X</a>
-					      </li>
-					      <li class="collection-item">Study CSS
-					      	<a href="#" class="secondary-content">X</a>
-					      </li>
-					    </ul>
+					    <ul class="collection"></ul>
 					    <a id="clear" class="btn">Clear all</a>
             		</div>
       			</div>
