--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
        				</div>
         			<div class="card-action">
         				<h4 id="task-title">Tasks</h4>
+        					<div class="input-field col s12">
+        						<input id="filter" type="text" >
+        						<label for="filter">Find task</label>
+        					</div>
 					    <ul class="collection"></ul>
 					    <a id="clear" class="btn">Clear all</a>
             		</div>
